# ai-nfl-fantasy-draft

./: .env.example  .gitignore  AGENTS.md  FIX_RESULTS_SUMMARY.md  README.md  SCRAPER_SUMMARY.md  TODO_fix_ranking_system.md  pyproject.toml  requirements.txt  test_report.json  test_snake.py  top5_performers.md
.ai/: LIVE_DRAFT_ASSISTANT_ROADMAP.md  PRD.md  TODO.md
data/: .gitkeep  data_summary.json  data_summary_2025.json  full_roster_summary.json  projection_metadata_2026.json  risk_flags.json
docs/: README.md  draft-night-runbook.md
frontend/: index.html
news/: .gitkeep
outputs/: .gitkeep  draft_board.json  draft_plan_pick_5.txt  draft_recommendations_20250726_161623.txt  draft_recommendations_20250726_161929.txt  draft_recommendations_20250730_131334.txt  draft_recommendations_20250730_131439.txt  emergency_draft_cheatsheet.md  player_rankings.json  ranking_summary.json  rankings_20250730_163033.json  rankings_20250730_184114.json  rankings_20250730_204647.json  rankings_simple_20250730_150146.json  rankings_simple_20250730_150259.json  rankings_simple_20250730_151441.json  test_rankings.json
scripts/: .gitkeep  README_cli.md  README_data_ingest.md  README_draft_recommender.md  cli.py  data_ingest.py  demo_cli.py  demo_pipeline.py  demo_ranker.py  draft-night-server  draft_assistant.py  draft_board.py  draft_night_cli.py  draft_recommendation_engine.py  draft_recommender.py  draft_session.py  espn_draft_kit_fetcher.py  espn_projection_provider.py  fetch_2026_projections.py  fix_ranking_issues.py  generate_emergency_cheatsheet.py  generate_player_data.py  (+14 more)
(+68 files in other folders)
